saves/test/demo_full_20240802_193545/conwaylife/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp conwaylife_tb.v conwaylife.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
conwaylife_tb.v:145: $finish called at 640000 (1ps)

iverilog cmd 2 error:

